--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@
     margin: 0%;
     padding: 0%;
     box-sizing: border-box;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 body{
@@ -37,10 +38,14 @@ body{
 }
 
 .undone{
+    text-align: center;
     color: red;
+    line-height: 20px;
+    font-size: 15px;
 }
 
 .task-description{
+    margin-left: 5px;
     display: inline-block;
     border-radius: 15px;
     color: #fff;
@@ -104,11 +109,15 @@ h1{
 
 
 /* actions */
-
-section{
-    height: 10%;
-    line-height: inherit;
-    border-bottom: 1px solid #D7D3D3;
+h2{
+    font-family: Arial, Helvetica, sans-serif;
+    display: inline-block;
+    font-size: medium;
+}
+.top-section{
+    height: 70px;
+    line-height: 70px;
+    border-bottom: 3px solid #D7D3D3;
     vertical-align: middle;
 }
 .top-side{
